# starark-plugin

./: .gitmodules  CMakeLists.txt  includes.h  postbuild.sh
Helpers/: BlueprintCache.h  SafeQueue.hpp  TaskExecutor.cpp  TaskExecutor.h  macros.h
Plugin/: DB.h  breeding.cpp  commands.cpp  config.cpp  experience.cpp  loot.cpp  saomega.cpp  saomega.h  spyglass.cpp  util.cpp  worldsave.cpp
libs/: mysql++11.h
